# nndescent-mlx

./: .gitignore  README.md  benchmark.py  pyproject.toml
nndescent_mlx/: __init__.py  nndescent.py
